# VoxCtrl

./: .gitignore  AppRun  BUILDING.md  CLAUDE.md  Cargo.toml  PKGBUILD  README.md  ai.voxctl.Dictation.yaml  ai.whisperwayland.Dictation.yaml  build_appimage.sh  index.html  install.sh  ollama-hotkey-settings.md  package-lock.json  package.json  requirements.txt  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1781152630721-7cf9b42dfe893.mjs  vitest.config.ts  voxctl.desktop  voxctl.sh  voxctr.sh  voxctrl-rename.md  voxctrl.desktop  voxctrl.sh  whisper-wayland.sh
.github/workflows/: ci.yml  release.yml  sync-wiki.yml  update-changelog.yml
Resources/: VoxCtl Live Audio Waveform Rendering.md  VoxCtrl Live Audio Waveform Rendering.md  Whisper-Wayland Live Audio Waveform Rendering.md
assets/: banner.xcf  record_on.png~
crates/voxctr-config/: Cargo.toml
crates/voxctr-config/src/: lib.rs
crates/voxctr-dbus/: Cargo.toml
crates/voxctr-dbus/src/: lib.rs
crates/voxctr-hotkeys/src/: gestures.rs  lib.rs  linux.rs  windows.rs
crates/voxctr-inference/: Cargo.toml
crates/voxctr-inference/src/: lib.rs  whisper_cpp.rs
crates/voxctr-inject/: Cargo.toml
crates/voxctr-inject/src/: lib.rs
crates/voxctr-llm/: Cargo.toml
crates/voxctr-llm/src/: lib.rs
crates/voxctr-mcp/: Cargo.toml
crates/voxctr-mcp/src/: lib.rs
crates/voxctr-routing/: Cargo.toml
crates/voxctr-routing/src/: lib.rs  loader.rs  models.rs  targets.rs  tests.rs
crates/voxctr-tts/: Cargo.toml
crates/voxctr-tts/src/: lib.rs
crates/voxctrl-audio/: Cargo.toml
crates/voxctrl-audio/src/: lib.rs
crates/voxctrl-config/: Cargo.toml
crates/voxctrl-config/src/: lib.rs
crates/voxctrl-dbus/: Cargo.toml
crates/voxctrl-dbus/src/: lib.rs
crates/voxctrl-hotkeys/: Cargo.toml
crates/voxctrl-hotkeys/src/: gestures.rs  lib.rs  linux.rs  windows.rs
crates/voxctrl-inference/: Cargo.toml
crates/voxctrl-inference/src/: lib.rs  postprocess.rs  whisper_cpp.rs
crates/voxctrl-inject/: Cargo.toml
crates/voxctrl-inject/src/: lib.rs
crates/voxctrl-llm/: Cargo.toml
crates/voxctrl-llm/src/: lib.rs
crates/voxctrl-mcp/: Cargo.toml
crates/voxctrl-mcp/src/: lib.rs
crates/voxctrl-routing/: Cargo.toml
crates/voxctrl-routing/src/: loader.rs  models.rs  targets.rs  tests.rs
crates/voxctrl-tts/: Cargo.toml
crates/voxctrl-tts/src/: lib.rs
docs/: README.md  api.md  appimage_build_process.md  architecture.md  audio.md  configuration.md  development.md  hotkeys.md  installation.md  integrations.md  mcp_documentation.md  overlays.md  overview.md  routing.md  speech-recognition.md  tts.md  ui.md  windows_build.md
examples/: bindings-multi.toml  targets-basic.toml  targets-multi.toml  targets-ollama-workflows.toml  targets-tts-agent.toml
rust/: package-lock.json  package.json  vite.config.ts
rust/crates/voxctr-audio/: Cargo.toml
rust/crates/voxctr-audio/src/: lib.rs
rust/crates/voxctr-config/src/: lib.rs
rust/crates/voxctr-hotkeys/: Cargo.toml
rust/crates/voxctr-hotkeys/src/: gestures.rs  lib.rs  linux.rs
rust/crates/voxctr-inference/: Cargo.toml
rust/crates/voxctr-inference/src/: backend.rs  lib.rs  postprocess.rs  whisper_cpp.rs
rust/crates/voxctr-inject/src/: lib.rs
rust/crates/voxctr-llm/src/: lib.rs
rust/crates/voxctr-mcp/src/: lib.rs
rust/crates/voxctr-routing/: Cargo.toml
rust/crates/voxctr-routing/src/: loader.rs  models.rs  router.rs  targets.rs
rust/crates/voxctr-tts/src/: lib.rs
rust/src/: app.css
rust/src-tauri/: Cargo.toml  tauri.conf.json
rust/src-tauri/capabilities/: default.json
rust/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
rust/src/lib/History/: History.svelte
rust/src/lib/Overlay/: Overlay.svelte  Pulse.svelte  VoiceCard.svelte  Waveform.svelte
rust/src/lib/Settings/: AboutTab.svelte  (+10 more)
rust/src/stores/: config.ts  status.ts
scripts/: build_appimage.sh  build_for_deploy.sh  build_windows.ps1  install-deps.sh  profile_resources.py  run_tests.py  setup-permissions.sh  speak_mcp.py  test_mcp_server.py  test_mcp_voice.py
src/: App.svelte  app.css  atspi_context.py  audio_recorder.py  config.py  config_validator.py  dbus_service.py  inference_engine.py  input_listener.py  llm_postprocessor.py  main.py  mcp_server.py  portal_injector.py  text_injector.py  tts_engine.py  tts_responder.py
src-tauri/: Cargo.toml  installer.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  default_overlays.rs  installer.rs  lib.rs  main.rs  overlay.rs  startup_log.rs  state.rs
src/backends/: __init__.py  faster_whisper_backend.py  moonshine_backend.py  protocol.py  selector.py  whisper_cpp_backend.py
src/gui/: history_window.py  overlay_manager.py  overlay_subprocess.py  overlay_window.py  settings_window.py  setup_dialog.py  tray_icon.py  waveform_overlay.py
src/gui/overlays/: base.py  blue_wave.py  pulse.py  tts_response.py  voice_card.py  waveform.py
src/hotkeys/: double_tap.py
src/lib/Diagnostics/: UdevWarning.svelte
src/lib/History/: History.svelte
src/lib/Overlay/: BlueWave.svelte  MonoBars.svelte  Overlay.svelte  Pulse.svelte  Spectrum.svelte  Terminal.svelte  Vinyl.svelte  VoiceCard.svelte  Waveform.svelte
src/lib/Settings/: AboutTab.svelte  AudioTab.svelte  CustomSelect.svelte  EngineTab.svelte  FeaturesTab.svelte  GeneralTab.svelte  HotkeysTab.svelte  OllamaTab.svelte  RoutingTab.svelte  Settings.svelte  TargetEditorModal.svelte  TargetsTab.svelte  TtsTab.svelte  VisualTab.svelte  routing-types.ts  tab.css
src/routing/: loader.py  models.py  router.py  targets.py
src/stores/: config.ts  status.ts
tests/: test_atspi_context.py  test_audio_recorder.py  test_backend_protocol.py  test_config_validator.py  test_double_tap.py  test_mcp_server.py  test_moonshine_backend.py  test_populate_audio_devices.py  test_routing_loader.py  test_setup_dialog.py  test_targets.py  test_tts_engine.py  test_wayland_native.py
tests/integration/: test_mcp_server.py
tests/svelte/: EngineTab.test.ts  HotkeysTab.test.ts  Overlay.test.ts  RoutingTab.test.ts  Settings.test.ts
