[workspace]
members = [
    "crates/voxctrl-config",
    "crates/voxctrl-routing",
    "crates/voxctrl-hotkeys",
    "crates/voxctrl-audio",
    "crates/voxctrl-inference",
    "crates/voxctrl-tts",
    "crates/voxctrl-inject",
    "crates/voxctrl-dbus",
    "crates/voxctrl-mcp",
    "crates/voxctrl-llm",
    "src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.8"
edition = "2021"
authors = ["VoxCtrl Contributors"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Paths / dirs
dirs = "5"

# Audio
cpal = "0.15"
rubato = "0.15"
rodio = "0.17"

# Regex / text processing
regex = "1"

# Clipboard
arboard = "3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# DBus (Linux only)
zbus = { version = "4", features = ["tokio"] }

# Desktop notifications
notify-rust = "4"

# Crypto (webhook HMAC)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Archive / download helpers
flate2 = "1"
tar = "0.4"
tempfile = "3"

# Time / dates
chrono = { version = "0.4", features = ["serde"] }

# Channel utilities
crossbeam-channel = "0.5"

# Internal crates
voxctrl-config   = { path = "crates/voxctrl-config" }
voxctrl-routing  = { path = "crates/voxctrl-routing" }
voxctrl-hotkeys  = { path = "crates/voxctrl-hotkeys" }
voxctrl-audio    = { path = "crates/voxctrl-audio" }
voxctrl-inference = { path = "crates/voxctrl-inference" }
voxctrl-tts      = { path = "crates/voxctrl-tts" }
voxctrl-inject   = { path = "crates/voxctrl-inject" }
voxctrl-dbus     = { path = "crates/voxctrl-dbus" }
voxctrl-mcp      = { path = "crates/voxctrl-mcp" }
voxctrl-llm      = { path = "crates/voxctrl-llm" }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"

[profile.dev]
opt-level = 1
