[package]
name = "voxctr-app"
version.workspace = true
edition.workspace = true

[lib]
name = "voxctr_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "voxctr"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 2 core
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell     = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs        = "2"
tauri-plugin-dialog    = "2"

# Internal crates
voxctr-config    = { workspace = true }
voxctr-routing   = { workspace = true }
voxctr-hotkeys   = { workspace = true }
voxctr-audio     = { workspace = true }
voxctr-inference = { workspace = true }
voxctr-tts       = { workspace = true }
voxctr-inject    = { workspace = true }
voxctr-dbus      = { workspace = true }
voxctr-mcp       = { workspace = true }
voxctr-llm       = { workspace = true }

# Runtime and utilities
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
crossbeam-channel = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
tauri-plugin-single-instance = "2.4.2"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
