[package]
name = "voxctrl-app"
version.workspace = true
edition.workspace = true

[lib]
name = "voxctrl_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "voxctrl"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 2 core
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell     = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs        = "2"
tauri-plugin-dialog    = "2"
dirs                   = { workspace = true }

# Internal crates
voxctrl-config    = { workspace = true }
voxctrl-routing   = { workspace = true }
voxctrl-hotkeys   = { workspace = true }
voxctrl-audio     = { workspace = true }
voxctrl-inference = { workspace = true }
voxctrl-tts       = { workspace = true }
voxctrl-inject    = { workspace = true }
voxctrl-dbus      = { workspace = true }
voxctrl-mcp       = { workspace = true }
voxctrl-llm       = { workspace = true }

# Runtime and utilities
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
crossbeam-channel = { workspace = true }
chrono = { workspace = true }
tauri-plugin-single-instance = "2.4.2"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
cuda = ["voxctrl-inference/cuda"]

[dev-dependencies]
tempfile = { workspace = true }
