[package]
name = "voxctr-llm"
version.workspace = true
edition.workspace = true

[dependencies]
voxctr-config = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
