[package]
name = "voxctrl-audio"
version.workspace = true
edition.workspace = true

[dependencies]
voxctrl-config = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
crossbeam-channel = { workspace = true }
cpal = { workspace = true }
rubato = { workspace = true }

[features]
default = []
# Enable RNNoise-based noise suppression
noisereduce = ["dep:nnnoiseless"]

[dependencies.nnnoiseless]
version = "0.5"
optional = true
