[package]
name = "voxctrl-dbus"
version.workspace = true
edition.workspace = true

# DBus only exists on Linux; this crate is a no-op on Windows but still compiles.
[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { workspace = true }
