[package]
name = "voxctrl-hotkeys"
version.workspace = true
edition.workspace = true

[dependencies]
voxctrl-config  = { workspace = true }
voxctrl-routing = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
crossbeam-channel = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"

[target.'cfg(target_os = "windows")'.dependencies]
# rdev provides global hotkey listening on Windows
rdev = "0.5"
