[package]
name = "voxctrl-inject"
version.workspace = true
edition.workspace = true

[dependencies]
voxctrl-config = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
arboard = { workspace = true }
notify-rust = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
# ashpd provides safe bindings to xdg-desktop-portal (Wayland fallback)
ashpd = "0.9"
