[package]
name = "voxctr-inference"
version.workspace = true
edition.workspace = true

[dependencies]
voxctr-config = { workspace = true }
voxctr-llm    = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
crossbeam-channel = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }

[features]
default = ["whisper-subprocess"]

# Call an external whisper-cli binary (no CMake required; easiest to set up)
whisper-subprocess = []

# Statically link whisper.cpp via whisper-rs (requires cmake + C++ toolchain)
whisper-bundled = ["dep:whisper-rs"]

# Moonshine ONNX backend via onnxruntime
moonshine = ["dep:ort", "dep:ndarray"]

[dependencies.whisper-rs]
version = "0.12"
optional = true

[dependencies.ort]
version = "2.0.0-rc.12"
optional = true
features = ["download-binaries"]

[dependencies.ndarray]
version = "0.16"
optional = true
